--- a/python/CHP_model_Casadi_v50.ipynb
+++ b/python/CHP_model_Casadi_v50.ipynb
@@ -77,9 +77,9 @@
     "Pth_eff_CHP = 0.59\n",
     "# TODO: check the names\n",
     "Pth_CHP_Nominal = 9.6e3 # in W\n",
-    "Pel_CHP_Nominal=1\n",
-    "CHP_eta_Thermal=1\n",
-    "CHP_eta_Electrical=1\n",
+    "Pel_CHP_Nominal=5 #kWel\n",
+    "CHP_eta_Thermal= 0.59 #is the same as Pth_eff_CHP  \n",
+    "CHP_eta_Electrical=0.3 # is the same as Pel_eff_CHP\n",
     "CHP_Fuel_LHV=1\n",
     "CHP_Fuel_HHV=12\n",
     "\n",
